updating styles, some sentences, and comments

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   <!-- GOOGLE FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- ION ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  <!-- ANIMATE ON SCROLL -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <!-- FONT AWESOME -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -31,14 +33,14 @@
 
 <body>
   <!-- HEADER STARTS -->
-  <header>
+  <header data-aos="fade-down" data-aos-duration="1200">
 
     <!-- navigation bar -->
-    <nav>
+    <nav >
       <!-- icon -->
       <div class="wrap-logo">
         <a href="/index.html">
-          <h2 class="logo">Vertex Cooling Pad</h2>
+          <h2 class="logo">Vertex Cooling Pad</h1>
         </a>
       </div>
       <!-- menu -->
@@ -65,15 +67,15 @@
         <!-- container fills with image for left side and welcome sentence for right side -->
         <div class="container">
           <!-- left side -->
-          <img class="left-img" src="img/hero.png" alt="Cooling Pad Vertex Cooling Pad">
+          <img class="left-img" data-aos="fade-right" src="img/hero.png" alt="Cooling Pad Vertex Cooling Pad">
 
           <!-- right side -->
           <div class="right">
-            <h1 class="welcome">Selamat Datang!</h1>
-            <h3 class="normal-text spaces">Tersedia Cooling Pad Laptop Custom <br> Bagi Para Gamers</h3>
+            <h1 class="welcome" data-aos="fade-left" data-aos-delay="200">Hi there!</h1>
+            <h3 class="normal-text spaces" data-aos="fade-left" data-aos-delay="400">Kami menyediakan<br>Cooling Pad Laptop Custom<br>untuk menurunkan suhu laptop Anda.</h3>
 
             <!-- wrapper div for marketplace links -->
-            <div class="marketplace">
+            <div class="marketplace" data-aos="fade-left" data-aos-delay="600">
               <a href="https://shp.ee/yce32py" class="shopee" target="_blank">
                 <img src="img/shopee.png" alt="Logo Shopee">
                 <span>Shopee</span>
@@ -94,33 +96,33 @@
 
       <!-- Keunggulan Section -->
       <section id="keunggulan">
-        <h1 class="sub-title">Keunggulan Produk</h1>
+        <h1 class="sub-title" data-aos="fade-up">Keunggulan Produk</h1>
 
         <!-- wrapper div for 4 cards -->
         <div class="wrapper-keunggulan">
           <!-- card 1 kipas turbo -->
-          <div class="card-keunggulan">
+          <div class="card-keunggulan" data-aos="zoom-in-up" data-aos-delay="200">
             <i class="fa-solid fa-fan fa-5x symbol"></i>
             <h3 class="normal-text">Kipas Turbo</h3>
             <p class="description">Kipas dengan kecepatan<br>total 12000 RPM</p>
           </div>
 
           <!-- card 2 suhu turun drastis -->
-          <div class="card-keunggulan">
+          <div class="card-keunggulan" data-aos="zoom-in-up" data-aos-delay="400">
             <i class="fa-solid fa-temperature-arrow-down fa-5x symbol"></i>
             <h3 class="normal-text">Suhu Turun Drastis</h3>
             <p class="description">Suhu laptop turun<br>hingga 20<sup>o</sup> C </p>
           </div>
 
           <!-- card 3 atur kecepatan -->
-          <div class="card-keunggulan">
+          <div class="card-keunggulan" data-aos="zoom-in-up" data-aos-delay="600">
             <i class="fa-solid fa-gauge-simple fa-5x symbol"></i>
             <h3 class="normal-text">Atur Kecepatan</h3>
             <p class="description">Kecepatan kipas<br>dapat diatur</p>
           </div>
 
           <!-- card 4 atur ketinggian -->
-          <div class="card-keunggulan">
+          <div class="card-keunggulan" data-aos="zoom-in-up" data-aos-delay="800">
             <i class="fa-solid fa-gear fa-5x symbol"></i>
             <h3 class="normal-text">Atur Ketinggian</h3>
             <p class="description">Atur ketinggian<br>sesuai keinginanmu</p>
@@ -131,12 +133,12 @@
 
       <!-- Tampilan Section -->
       <section id="tampilan">
-        <h2 class="sub-title">Tampilan Produk</h1>
+        <h2 class="sub-title" data-aos="fade-up">Tampilan Produk</h1>
           <!-- wrapper div for 3 cards -->
           <div class="wrapper-tampilan">
 
             <!-- card 1 tampak atas -->
-            <div class="card-tampilan">
+            <div class="card-tampilan" data-aos="zoom-in-up" data-aos-delay="200">
               <img class="img-tampilan" src="img/hero_cut.png" alt="Cooling Pad Laptop Tampak Atas">
               <div>
                 <h3 class="img-text">Tampak Atas</h3>
@@ -144,7 +146,7 @@
             </div>
 
             <!-- card 2 tampak bawah -->
-            <div class="card-tampilan">
+            <div class="card-tampilan" data-aos="zoom-in-up" data-aos-delay="400">
               <img class="img-tampilan" src="img/bawah_cut.png" alt="Cooling Pad Laptop Tampak Atas">
               <div>
                 <h3 class="img-text">Tampak Bawah</h3>
@@ -152,7 +154,7 @@
             </div>
 
             <!-- card 3 dengan laptop -->
-            <div class="card-tampilan">
+            <div class="card-tampilan" data-aos="zoom-in-up" data-aos-delay="600">
               <img class="img-tampilan" src="img/laptop.png" alt="Cooling Pad Laptop Tampak Atas">
               <div>
                 <h3 class="img-text">Dengan Laptop</h3>
@@ -160,16 +162,16 @@
             </div>
           </div>
 
-          <h2 class="normal-text tampilan-text">Kini Tersedia di Market Place Shopee dan Tokopedia.<br>Mulai dari Rp
+          <h2 class="normal-text tampilan-text" data-aos="fade-right" >Kini Tersedia di Market Place Shopee dan Tokopedia.<br>Mulai dari Rp
             294.930,00!</h2>
       </section>
 
       <!-- Review Section -->
       <section id="review">
-        <h2 class="sub-title review-sub">Review Produk</h1>
+        <h2 class="sub-title review-sub" data-aos="fade-up">Review Produk</h1>
 
           <!-- slider -->
-          <div class="relative">
+          <div class="relative" data-aos="fade-left" data-aos-delay="200">
             <div class="wrapper-slider">
               <div class="slider">
                 <div class="card-slider">
@@ -308,21 +310,18 @@
 
     <!-- Tentang Penulis -->
     <aside id="tentang">
-      <h1 class="sub-title">Tentang Penulis</h1>
+      <h1 class="sub-title" data-aos="fade-up">Tentang Penulis</h1>
 
       <!-- wrapper div -->
-      <div class="card-tentang">
-
-        <img src="img/vito_cut.jpg" style="width: 50px;" alt="Vito Hartanto">
-
-        <span class="normal-text">
-          Vito Hartanto<br>
-          Lahir: Pekanbaru,<br>
-          2 November 2002<br>
-          Domisili: Sleman<br>
-          Status: Mahasiswa<br>
-          Institusi: UGM (Teknik Elektro)
-        </span>
+      <div class="card-tentang" data-aos="zoom-in">
+        <img src="img/Vito.jpg" class="gambar-vito" alt="Vito Hartanto">
+        <div class="normal-text text-penulis">
+         <p>Nama : Vito Hartanto</p>
+         <p>TTL : Pekanbaru, 2 November 2002</p>
+         <p>Domisili : Sleman</p>
+         <p>Pekerjaan : Mahasiswa</p>
+         <p>Universitas : Universitas Gadjah Mada</p>
+        </div>
       </div>
 
     </aside>
@@ -330,7 +329,7 @@
   <!-- MAIN ENDS -->
 
   <!-- FOOTER STARTS -->
-  <footer>
+  <footer >
     <!-- icon -->
     <div class="social-media">
       <a href="https://www.instagram.com/hartantovito/" target="_blank">
@@ -345,6 +344,11 @@
 
   </footer>
   <!-- FOOTER ENDS -->
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 
 </body>
